feat: support adding extra RBAC rules via annotations (#701)
* chore: remove unneeded dependency

* feat: add annotations module with RBAC-related annotations

* refactor: move verb constants to new Verbs class in annotations module

* refactor: rename constants more appropriately, add more

* refactor: rename Verbs to more precise RBACVerbs

* feat: make RBACRule repeatable, add ALL constant

* feat: support adding extra RBAC rules via annotations

See SimpleReconciler for a usage example.
Fixes #696

* fix: properly handle case where there's only one RBACRule